# fprintd

./: .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  NEWS  README  TODO  config.h.in  meson.build  meson_options.txt
data/: fprintd.1  fprintd.pod  fprintd.service.in  meson.build  net.reactivated.Fprint.conf  net.reactivated.Fprint.service.in  net.reactivated.fprint.device.policy.in  pam_fprintd.8  pam_fprintd.pod
debian/: NEWS  changelog  control  copyright  fprintd-doc.doc-base  fprintd-doc.links  fprintd.dirs  fprintd.install  fprintd.links  fprintd.maintscript  fprintd.postinst  libpam-fprintd.docs  libpam-fprintd.install  libpam-fprintd.postinst  libpam-fprintd.prerm  rules  watch
debian/pam-configs/: fprintd
debian/patches/: Don-t-try-to-clear-storage-on-devices-without-internal-st.patch  Translated-using-Weblate-Belarusian.patch  Translated-using-Weblate-Catalan.patch  Translated-using-Weblate-Chinese-Simplified-zh_CN.patch  Translated-using-Weblate-Chinese-Traditional-zh_TW.patch  Translated-using-Weblate-Georgian.patch  Translated-using-Weblate-Italian.patch  Translated-using-Weblate-Russian.patch  Translated-using-Weblate-Swedish.patch  Translated-using-Weblate-Ukrainian.patch  Update-translation-files.patch  po-fprintd.pot-Update-pot-file-for-being-picked-by-weblat.patch  po-fprintd.pot-Update-via-pipeline-1395148.patch  series  suspend-cancel-ongoing-enroll.patch  tests-Fix-dbusmock-AddDevice-calls-to-include-optional-ar.patch  tests-Hide-intermediate-error-in-output-checker.patch
doc/: meson.build
doc/dbus/: meson.build
pam/: fingerprint-strings.h  meson.build  pam_fprintd.c  pam_fprintd.ver  pam_fprintd_autoptrs.h
po/: LINGUAS  POTFILES.in  af.po  ar.po  as.po  ast.po  az.po  be.po  bg.po  bn_IN.po  ca.po  ca@valencia.po  check-translations.sh  cs.po  cy.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fo.po  fprintd.pot  fr.po  fur.po  ga.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  ia.po  id.po  it.po  ja.po  (+38 more)
scripts/: uncrustify.cfg  uncrustify.sh
src/: dbus-interactive-auth.patch  device.c  file_storage.c  file_storage.h  fprintd.h  main.c  manager.c  meson.build  storage.h
tests/: LSAN-leaks-suppress.txt  fprintd.py  meson.build  test_fprintd_utils.py
tests/dbusmock/: fprintd.py  polkitd.py
tests/pam/: meson.build  test_pam_fprintd.py
tests/pam/services/: fprintd-pam-test.in  meson.build
utils/: delete.c  enroll.c  list.c  meson.build  verify.c
